--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="profile__container">
                     <img src="./images/avatar.jpg" alt="аватар" class="profile__avatar">
                     <div class="profile__info">
-                        <div class="profile__edit_btn">
+                        <div class="profile__edit-btn">
                             <h1 class="profile__header">Жак-Ив Кусто</h1>
                             <button class="profile__edit page__opacity"></button>
                         </div>
