--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
                     <div class="profile__info">
                         <div class="profile__edit-btn">
                             <h1 class="profile__header">Жак-Ив Кусто</h1>
-                            <button type="button" class="profile__edit button-opacity" aria-label="редактирование профиля"></button>
+                            <button type="button" class="profile__edit button-opacity"
+                                aria-label="редактирование профиля"></button>
                         </div>
                         <p class="profile__comment">Исследователь океана</p>
                     </div>
 
                 </div>
-                <button class="profile__button button-opacity" type="button" aria-label="добавить новую фотографию"></button>
+                <button class="profile__button button-opacity" type="button"
+                    aria-label="добавить новую фотографию"></button>
             </section>
 
             <!-- ELEMENTS -->
@@ -54,7 +56,8 @@
                     </li>
 
                     <li class="cards__card">
-                        <img src="./images/dombay.jpg" alt="Горная территория в Карачаево-Черкесии." class="cards__photo">
+                        <img src="./images/dombay.jpg" alt="Горная территория в Карачаево-Черкесии."
+                            class="cards__photo">
                         <div class="cards__container">
                             <h2 class="cards__caption">Домбай</h2>
                             <button type="button" class="cards__like" aria-label="поставить лайк"></button>
@@ -71,7 +74,8 @@
 
 
                     <li class="cards__card">
-                        <img src="./images/dombay.jpg" alt="Горная территория в Карачаево-Черкесии." class="cards__photo">
+                        <img src="./images/dombay.jpg" alt="Горная территория в Карачаево-Черкесии."
+                            class="cards__photo">
                         <div class="cards__container">
                             <h2 class="cards__caption">Домбай</h2>
                             <button type="button" class="cards__like" aria-label="поставить лайк"></button>
@@ -94,11 +98,11 @@
             <p class="footer__text">&copy; 2021 Mesto Russia</p>
         </footer>
 
-
         <div class="popup">
             <div class="popup__container">
-                <form action="" class="popup__form" method="post" name="form">
-                    <button type="button" class="popup__close-btn button-opacity" aria-label="закрыть редактирование профиля"></button>
+                <form action="#" class="popup__form" method="post" name="form">
+                    <button type="button" class="popup__close-btn button-opacity"
+                        aria-label="закрыть редактирование профиля"></button>
                     <h3 class="popup__header">Редактировать профиль</h3>
                     <input type="text" class="popup__input" id="name" name="name" value="" placeholder="Имя">
                     <input type="text" class="popup__input" id="job" name="job" value="" placeholder="О себе">
