--- a/index.html
+++ b/index.html
@@ -29,76 +29,24 @@
                         </div>
                         <p class="profile__comment">Исследователь океана</p>
                     </div>
-
                 </div>
-                <button class="profile__button button-opacity" type="button"
+                <button class="profile__add-btn button-opacity" type="button"
                     aria-label="добавить новую фотографию"></button>
             </section>
 
-            <!-- ELEMENTS -->
-            <section class="cards">
-                <ul class="cards__elements">
-
-                    <li class="cards__card">
-                        <img src="./images/karachaevsk.jpg" alt="Христианский храм." class="cards__photo">
-                        <div class="cards__container">
-                            <h2 class="cards__caption">Карачаевск</h2>
-                            <button type="button" class="cards__like" aria-label="поставить лайк"></button>
-                        </div>
-                    </li>
-
-                    <li class="cards__card">
-                        <img src="./images/elbrus.jpg" alt="Эльбрус" class="cards__photo">
-                        <div class="cards__container">
-                            <h2 class="cards__caption">Гора Эльбрус</h2>
-                            <button type="button" class="cards__like" aria-label="поставить лайк"></button>
-                        </div>
-                    </li>
-
-                    <li class="cards__card">
-                        <img src="./images/dombay.jpg" alt="Горная территория в Карачаево-Черкесии."
-                            class="cards__photo">
-                        <div class="cards__container">
-                            <h2 class="cards__caption">Домбай</h2>
-                            <button type="button" class="cards__like" aria-label="поставить лайк"></button>
-                        </div>
-                    </li>
-
-                    <li class="cards__card">
-                        <img src="./images/elbrus.jpg" alt="Эльбрус" class="cards__photo">
-                        <div class="cards__container">
-                            <h2 class="cards__caption">Гора Эльбрус</h2>
-                            <button type="button" class="cards__like" aria-label="поставить лайк"></button>
-                        </div>
-                    </li>
-
-
-                    <li class="cards__card">
-                        <img src="./images/dombay.jpg" alt="Горная территория в Карачаево-Черкесии."
-                            class="cards__photo">
-                        <div class="cards__container">
-                            <h2 class="cards__caption">Домбай</h2>
-                            <button type="button" class="cards__like" aria-label="поставить лайк"></button>
-                        </div>
-                    </li>
-
-                    <li class="cards__card">
-                        <img src="./images/karachaevsk.jpg" alt="Христианский храм." class="cards__photo">
-                        <div class="cards__container">
-                            <h2 class="cards__caption">Карачаево-Черкессия</h2>
-                            <button type="button" class="cards__like" aria-label="поставить лайк"></button>
-                        </div>
-                    </li>
-                </ul>
-
+            <section class="elements">
+                <div class="cards__elements">
             </section>
+
+            </div>
+
         </main>
 
         <footer class="footer">
             <p class="footer__text">&copy; 2021 Mesto Russia</p>
         </footer>
 
-        <div class="popup">
+        <div class="popup popup_type_edit">
             <div class="popup__container">
                 <form action="#" class="popup__form" method="post" name="form">
                     <button type="button" class="popup__close-btn button-opacity"
@@ -111,7 +59,39 @@
             </div>
         </div>
 
+        <div class="popup popup__type_new-card">
+            <div class="popup__container">
+                <form action="#" class="popup__form" method="post" name="element">
+                    <button type="button" class="popup__close-btn button-opacity"
+                    aria-label="закрыть редактирование профиля"></button>
+                    <h3 class="popup__header">Новое Место</h3>
+                    <input type="text" class="popup__input" id="title" name="title" value="" placeholder="Название">
+                    <input type="text" class="popup__input" id="link" name="link" value="" placeholder="Ссылка на картинку">
+                    <button type="submit" class="popup__button" aria-label="создать">Создать</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="popup popup__type_open_photo">
+                <figure class="figure">
+                    <button type="button" class="figure__close-btn popup__close-btn button-opacity" id="closePhoto"></button>
+                    <img src="#" alt="#" class="figure__photo">
+                    <figcaption class="figure__caption"></figcaption>
+                </figure>
+        </div>
+
     </div>
+
+    <template id="element">
+            <li class="cards__item">
+                <button class="cards__trash button-opacity" type="button"></button>
+                <img alt="" class="cards__photo">
+                <div class="cards__container">
+                    <h2 class="cards__caption"></h2>
+                    <button type="button" class="cards__like" aria-label="поставить лайк"></button>
+                </div>
+            </li>
+    </template>
 
     <script src="./scripts/script.js"></script>
 </body>
