add template, functions

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
             </section>
 
             <section class="elements">
-                <div class="cards__elements">
+                <div class="cards__elements"></div>
             </section>
-
-            </div>
 
         </main>
 
