add template, functions

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </section>
 
             <section class="elements">
-                <div class="cards__elements"></div>
+                <div class="templates__elements"></div>
             </section>
 
         </main>
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="popup popup__type_new-card">
+        <div class="popup popup_type_new-card">
             <div class="popup__container">
                 <form action="#" class="popup__form" method="post" name="element">
                     <button type="button" class="popup__close-btn button-opacity"
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div class="popup popup__type_open_photo">
+        <div class="popup popup_type_open_photo">
                 <figure class="figure">
                     <button type="button" class="figure__close-btn popup__close-btn button-opacity" id="closePhoto"></button>
                     <img src="#" alt="#" class="figure__photo">
