--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <div class="popup popup_type_open_photo">
+        <div class="popup popup_type_open-photo">
                 <figure class="figure">
                     <button type="button" class="figure__close-btn popup__close-btn button-opacity" id="closePhoto"></button>
                     <img src="#" alt="#" class="figure__photo">
