исправление ошибок ревью кода

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     aria-label="закрыть редактирование профиля"></button>
                     <h3 class="popup__header">Новое Место</h3>
                     <input type="text" class="popup__input" id="title" name="title" value="" placeholder="Название">
-                    <input type="text" class="popup__input" id="link" name="link" value="" placeholder="Ссылка на картинку">
+                    <input type="url" class="popup__input" id="link" name="link" value="" placeholder="Ссылка на картинку">
                     <button type="submit" class="popup__button" aria-label="создать">Создать</button>
                 </form>
             </div>
