--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
 
         <div class="popup popup_type_edit">
             <div class="popup__container">
-                <form action="#" class="popup__form" method="post" name="form">
+                <form action="#" class="popup__form" method="post" name="form" novalidate>
                     <button type="button" class="popup__close-btn button-opacity"
                         aria-label="закрыть редактирование профиля"></button>
                     <h3 class="popup__header">Редактировать профиль</h3>
-                    <input type="text" class="popup__input" id="name" name="name" value="" placeholder="Имя">
-                    <input type="text" class="popup__input" id="job" name="job" value="" placeholder="О себе">
+                    <input required minlength="2" maxlength="40" type="text" class="popup__input" id="name" name="name" value="" placeholder="Имя">
+                    <span class="popup__input-error" id="name-error"></span>
+                    <input required minlength="2" maxlength="200" type="text" class="popup__input" id="job" name="job" value="" placeholder="О себе">
+                    <span class="popup__input-error" id="job-error"></span>
                     <button type="submit" class="popup__button" aria-label="сохранить изменения">Сохранить</button>
                 </form>
             </div>
@@ -68,13 +70,15 @@
 
         <div class="popup popup_type_new-card">
             <div class="popup__container">
-                <form action="#" class="popup__form" method="post" name="element">
+                <form action="#" class="popup__form" method="post" name="element" novalidate>
                     <button type="button" class="popup__close-btn button-opacity"
                     aria-label="закрыть редактирование профиля"></button>
                     <h3 class="popup__header">Новое Место</h3>
-                    <input type="text" class="popup__input" id="title" name="title" value="" placeholder="Название">
-                    <input type="url" class="popup__input" id="link" name="link" value="" placeholder="Ссылка на картинку">
-                    <button type="submit" class="popup__button" aria-label="создать">Создать</button>
+                    <input required minlength="2" maxlength="30" type="text" class="popup__input" id="title" name="title" value="" placeholder="Название">
+                    <span class="popup__input-error" id="title-error"></span>
+                    <input required type="url" class="popup__input" id="link" name="link" value="" placeholder="Ссылка на картинку">
+                    <span class="popup__input-error" id="link-error"></span>
+                    <button type="submit" class="popup__button popup__button_inactive" aria-label="создать">Создать</button>
                 </form>
             </div>
         </div>
@@ -88,7 +92,7 @@
         </div>
 
     </div>
-
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/script.js"></script>
 </body>
 
