fix config, reset btn

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <span class="popup__input-error" id="title-error"></span>
                     <input required type="url" class="popup__input" id="link" name="link" value="" placeholder="Ссылка на картинку">
                     <span class="popup__input-error" id="link-error"></span>
-                    <button type="submit" class="popup__button popup__button_inactive" aria-label="создать">Создать</button>
+                    <button type="submit" disabled="disabled" class="popup__button popup__button_inactive" aria-label="создать">Создать</button>
                 </form>
             </div>
         </div>
