--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     </div>
     <script src="./scripts/validate.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
