--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         </div>
 
     </div>
+    <script src="./scripts/initial-cards.js"></script>
     <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
