--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
         </div>
 
     </div>
-    <script src="./scripts/initial-cards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 
 </html>
